<resources>
    <string name="app_name">Project6</string>
    <string name="note_title">Note Title</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
</resources>