<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/noteDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/saveNoteButton"
        android:layout_below="@+id/noteTitleEditText"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="5"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

</RelativeLayout>